--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ pgadmin/
 Network Trash Folder
 Temporary Items
 .apdisk
-
+.env
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
