--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pg_admin
+    links:
+      - "postgresql:postgresql-server"
     env_file: .env
     ports:
       - '5555:80'
