update .gitignore: ignore binary file from docker dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+neulhan-commerce-server
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,pycharm,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,pycharm,go
